--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.jasperreports-javaflow-4.7.1.jar=library/jasperreports-javaflow-4
 file.reference.jcalendar-1.4.jar=library/jcalendar-1.4.jar
 file.reference.jcommon-1.0.15.jar=library/jcommon-1.0.15.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=..\\..\\..\\..\\..\\..\\Downloads\\mysql-connector-java-5.1.13-bin.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar-1=library\\mysql-connector-java-5.1.13-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
